# huddle

./: .gitignore  Cargo.toml  README.md  docker-compose.yml
general_manager/: Cargo.toml  Dockerfile
general_manager/src/: main.rs  player.rs
locker_room/: Cargo.toml  Dockerfile
locker_room/src/: main.rs
scout/: Dockerfile  pyproject.toml
scout/scout/: main.py
