[package]
name = "locker_room"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
mongodb = "2.4"
serde_json = "1.0.133"
serde = { version = "1.0", features = ["derive"] }
pssstt = { git = "https://github.com/AminAcer/pssstt", branch = "main" }
tokio = {version = "1", features = ["full"]}
